# crypto-ml-pipeline

./: .gitignore  NOTES.md  main.py  pyproject.toml  rate_limiter.py
infra/: .env
infra/mlflow/: requirements.txt
infra/producer/: main.py
src/: docker-compose.yml  init-multiple-dbs.sh
src/airflow/: Dockerfile  requirements.txt
src/mlflow/: Dockerfile
src/tracker/: coinbase.py  coinbase_test.py  ticker_price.json
