[project]
name = "crypto-ml-pipeline"
version = "0.1.0"
description = "Real-time crypto price prediction pipeline using Kafka, Airflow, MLflow and Spark"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography",
    "boto3",
    "mlflow",
    "pandas",
    "scikit-learn",
    "xgboost",
    "python-dotenv",
    "pyyaml",
    "websockets",
    "confluent-kafka",
]